--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -10,7 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.1",
+    "@types/helmet": "^0.0.44",
     "@types/mongoose": "^5.5.17",
+    "helmet": "^3.21.0",
     "nodemon": "^1.19.1",
     "socket.io-redis": "^5.2.0",
     "ts-node": "^8.3.0"
